--- a/DM553/preamble.tex
+++ b/DM553/preamble.tex
@@ -16,7 +16,7 @@
 \defaultfontfeatures{%                                 %  of declarations
   Scale=MatchLowercase, % needed here ...              %  is important for
 }                                                      %  single quotes not
-\setmonofont{Inconsolata LGC}                          %  to turn out curly
+\setmonofont{Inconsolata LGC Nerd Font}                          %  to turn out curly
                                                        %  ("typographic")
 \defaultfontfeatures{%                                 %  in verbatim blocks
   Scale=MatchLowercase, % ... and here again           %  of Scheme code.
